--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,9 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.8
   cached_network_image:
+  google_fonts:
+  flutter_riverpod:
+  flutter_screenutil:
 dev_dependencies:
   flutter_test:
     sdk: flutter
