all ui design main page for web implemented

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,4 +21,9 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/images/brands/
+    - assets/images/collection/
+    - assets/images/product/
+    - assets/images/grid/web/
+    - assets/images/grid/mobile/
     - assets/icons/
