--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
     "short_name": "ecommerce_woocom",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#1B4B66",
-    "theme_color": "#1B4B66",
+    "background_color": "#0175C2",
+    "theme_color": "#0175C2",
     "description": "A new Flutter project.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
