--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   carousel_slider:
   flutter_riverpod:
   flutter_screenutil:
+  firebase_auth: ^5.4.2
+  firebase_core: ^3.11.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
