--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,10 +13,11 @@ dependencies:
   google_fonts:
   go_router:
   carousel_slider:
-  flutter_riverpod:
+  flutter_riverpod: ^2.6.1
   flutter_screenutil:
   firebase_auth: ^5.4.2
   firebase_core: ^3.11.0
+  riverpod: ^2.6.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
