--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   firebase_auth: ^5.4.2
   firebase_core: ^3.11.0
   riverpod: ^2.6.1
+  cloud_firestore: ^5.6.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
